<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="192dp"
        android:layout_height="0dp"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="319dp"
        android:layout_height="56dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="230dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="237dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="メールアドレスを入力してください"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword3"
        android:layout_width="321dp"
        android:layout_height="53dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="53dp"
        android:background="@drawable/edittext_border"
        android:ems="10"
        android:hint="パスワードを入力してください"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="31dp"
        android:text="@string/sginin"
        android:textColor="#9E7802"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <Button
        android:id="@+id/button4"
        android:layout_width="299dp"
        android:layout_height="55dp"
        android:layout_marginBottom="130dp"
        android:text="@string/signup"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        app:layout_constraintVertical_bias="0.558" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="236dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="120dp"
        android:text="@string/createuser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2" />

</androidx.constraintlayout.widget.ConstraintLayout>